--- a/stylus/assets/css/components/header.styl
+++ b/stylus/assets/css/components/header.styl
@@ -1,49 +1,25 @@
 .header
-	.notifications-icon,
-	.help-icon,
-	.menu-icon
-		position relative
-		display inline-block
-		cursor pointer
-		width 1.4em
-		vertical-align middle
-		height 1.4em
 
-		.icon-glyph,
-		.icon-glyph-new
-			top: 50%;
-			margin: 0;
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			left: 0;
-			-webkit-transform: translateY(-50%);
-			transform: translateY(-50%);
+  .notifications-icon, .help-icon, .menu-icon
+    position relative
+    float left
+    cursor pointer
+    width 1.4em
+    vertical-align middle
+    height 1.4em
+    margin 0 .25em
 
+  .icon-glyph, .icon-glyph-new
+    top 50%
+    margin 0
+    position absolute
+    width 100%
+    height 100%
+    left 0
 
-
-.ngdialog-theme-menu 
-	// .menu
-	// 	background color-logo-green
-	// 	color white
-
-	// 	display block
-	// 	top .5em
-	// 	right 0
-	// 	min-width 12em
-	// 	padding 0 1em 1em
-	// 	text-align left
-	// 	z-index 1
-
-	// 	h2
-	// 		margin .5em 0
-	// 		border-bottom 1px solid white
-		
-	// 	li 
-	// 		display block
-	// 		margin 0
-	// 	a
-	// 		text-align left
-	// 		color white
-	// 		margin 0
-	// 		line-height 2em
+  .app-user
+    & > div
+      display inline-block
+    .user-name
+      float left
+      margin 0 .5em
