--- a/stylus/assets/css/pages/app-page.styl
+++ b/stylus/assets/css/pages/app-page.styl
@@ -102,11 +102,11 @@
 		box-shadow none
 
 	.icon-glyph-new
-		height: 1em;
+		// height: 1em;
 		// font-size: 0.75em;
-		font-size 1.25em
-		position: relative;
-		top: -0.25em;
+		// font-size 1.25em
+		// position: relative;
+		// top: -0.25em;
 
 	[contenteditable], btn[contenteditable]
 		outline none
